--- a/style.css
+++ b/style.css
@@ -50,6 +50,79 @@ nav{
 	padding-left: 15px;
 }
 
+/*************************
+Adam's Additional Styling
+*************************/
+
+.wrapper-main{
+	width: 90%;
+	margin: 0 auto;
+	border-top: 1px solid lightgrey;
+}
+
+.content-main{
+	float: left;
+	width: 60%;
+	margin-top: 20px;
+}
+
+.main-img {
+	height: 90%;
+	width: 90%;
+	margin: 25px;
+}
+
+.aside-main {
+	float: left;
+	width: 39%;
+	font-family: Tahoma, Geneva, sans-serif;
+	text-align: center;
+	color: grey;
+	margin-top: 20px;
+}
+
+.imgs-main {
+	height: 190px;
+	display: inline;
+	border: 1px solid lightgrey;
+}
+
+.shop-now {
+	clear: both;
+	text-align: center;
+}
+
+.shop-button {
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 1.5em;
+	margin-top: 25px;
+	padding: 6px 12px;
+	text-transform: uppercase;
+	background: #555;
+	color: #fff;
+	border: none;
+	letter-spacing: .1em;
+}
+
+.secondary-content {
+	border-top: 1px solid lightgrey;
+	border-bottom: 1px solid lightgrey;
+	margin-top: 50px;
+	font-family: Tahoma, Geneva, sans-serif;
+	text-align: center;
+	color: grey;
+	padding-bottom: 5px;
+}
+
+.secondary-content h3 {
+	font-size: 1.3em;
+}
+
+.secondary-content p {
+	font-size: 1.2em;
+	letter-spacing: .2em;
+}
+
 
 /**************************************
 	ABOUT PAGE
